ros2_ws/log/build_2026-05-24_22-49-58/my_cpp_pkg/stderr.log
/home/beeboss/Desktop/ros_workspaces/ros2_ws/src/my_cpp_pkg/src/number_publisher.cpp: In constructor ‘NumberPublisherNode::NumberPublisherNode()’:
/home/beeboss/Desktop/ros_workspaces/ros2_ws/src/my_cpp_pkg/src/number_publisher.cpp:11:9: error: ‘hardware_status_publisher_’ was not declared in this scope; did you mean ‘hardware_status_timer_’?
   11 |         hardware_status_publisher_ = this->create_publisher<my_custom_interfaces::msg::HardwareStatus>("hardware_status", 10);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~
      |         hardware_status_timer_
/home/beeboss/Desktop/ros_workspaces/ros2_ws/src/my_cpp_pkg/src/number_publisher.cpp: In member function ‘void NumberPublisherNode::publishHardwareStatus()’:
/home/beeboss/Desktop/ros_workspaces/ros2_ws/src/my_cpp_pkg/src/number_publisher.cpp:29:9: error: ‘hardware_status_publisher_’ was not declared in this scope; did you mean ‘hardware_status_timer_’?
   29 |         hardware_status_publisher_->publish(msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~
      |         hardware_status_timer_
gmake[2]: *** [CMakeFiles/number_publisher.dir/build.make:76: CMakeFiles/number_publisher.dir/src/number_publisher.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:167: CMakeFiles/number_publisher.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
gmake: *** [Makefile:146: all] Error 2
